--- a/blog/resources/assets/sass/app.scss
+++ b/blog/resources/assets/sass/app.scss
@@ -14,3 +14,10 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.post-annotation {
+  margin: 20px 0;
+}
+.post-buttons{
+  text-align: right;
+}
